--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../part3_frontend && npm run build && @powershell Copy-Item build -Recurse ../part3",
+    "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../part3_frontend && npm run build && @powershell Copy-Item build -Recurse ../part3",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "author": "Sami Nuutinen",
@@ -17,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
