--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "@powershell Remove-Item -Recurse -Force build && cd ../part3_frontend && npm run build && @powershell Copy-Item build -Recurse ../part3",
     "deploy": "fly deploy",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.9",
+    "eslint": "^8.49.0",
     "nodemon": "^3.0.1"
   }
 }
